--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -39,6 +39,7 @@ flag sse42
 
 common base                     { build-depends: base                     >= 4          && < 5      }
 
+common aeson                    { build-depends: aeson                    >= 1.4.3.0    && < 1.5    }
 common ansi-wl-pprint           { build-depends: ansi-wl-pprint           >= 0.6.8.2    && < 0.7    }
 common array                    { build-depends: array                    >= 0.5        && < 0.6    }
 common attoparsec               { build-depends: attoparsec               >= 0.13       && < 0.14   }
@@ -83,6 +84,7 @@ common config
 
 library
   import:   base, config
+          , aeson
           , ansi-wl-pprint
           , attoparsec
           , bits-extra
@@ -172,6 +174,7 @@ test-suite hw-json-test
           , hw-prim
           , hw-rankselect
           , hw-rankselect-base
+          , text
           , transformers
           , vector
   type:               exitcode-stdio-1.0
