--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -66,6 +66,7 @@ common hw-simd                  { build-depends: hw-simd                  >= 0.1
 common lens                     { build-depends: lens                     >= 4          && < 5      }
 common mmap                     { build-depends: mmap                     >= 0.5        && < 0.6    }
 common optparse-applicative     { build-depends: optparse-applicative     >= 0.14       && < 0.15   }
+common scientific               { build-depends: scientific               >= 0.3.6.2    && < 0.4    }
 common text                     { build-depends: text                     >= 1.2        && < 1.3    }
 common transformers             { build-depends: transformers             >= 0.4        && < 0.6    }
 common vector                   { build-depends: vector                   >= 0.12       && < 0.13   }
@@ -162,6 +163,7 @@ executable hw-json
 
 test-suite hw-json-test
   import:   base, config
+          , aeson
           , attoparsec
           , bytestring
           , hedgehog
@@ -174,6 +176,7 @@ test-suite hw-json-test
           , hw-prim
           , hw-rankselect
           , hw-rankselect-base
+          , scientific
           , text
           , transformers
           , vector
@@ -184,6 +187,7 @@ test-suite hw-json-test
   ghc-options:        -threaded -rtsopts -with-rtsopts=-N
   build-tools:        hspec-discover
   other-modules:
+      HaskellWorks.Data.Json.LightJsonSpec
       HaskellWorks.Data.Json.Simple.CursorSpec
       HaskellWorks.Data.Json.Standard.CursorSpec
       HaskellWorks.Data.Json.Standard.GenCursorTest
