Upgrade to haskell-build-4.0.1

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -75,8 +75,8 @@ common word8                    { build-depends: word8                    >= 0.1
 common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups     >= 0.16     && < 0.19 } }
 
 common config
-  default-language:   Haskell2010
-  ghc-options:        -Wall -O2 -msse4.2
+  default-language:     Haskell2010
+  ghc-options:          -Wall -O2 -msse4.2
   if flag(sse42)
     ghc-options: -msse4.2
   if flag(bmi2) && impl(ghc >= 8.4.1)
@@ -150,10 +150,10 @@ executable hw-json
           , semigroups
           , text
           , vector
-  main-is:            Main.hs
-  hs-source-dirs:     app
-  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
-  build-depends:      hw-json
+  main-is:              Main.hs
+  hs-source-dirs:       app
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-depends:        hw-json
   other-modules:
       App.Commands
       App.Commands.CreateIndex
@@ -180,12 +180,12 @@ test-suite hw-json-test
           , text
           , transformers
           , vector
-  type:               exitcode-stdio-1.0
-  main-is:            Spec.hs
-  build-depends:      hw-json
-  hs-source-dirs:     test
-  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
-  build-tools:        hspec-discover
+  type:                 exitcode-stdio-1.0
+  main-is:              Spec.hs
+  build-depends:        hw-json
+  hs-source-dirs:       test
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:   hspec-discover:hspec-discover
   other-modules:
       HaskellWorks.Data.Json.LightJsonSpec
       HaskellWorks.Data.Json.Simple.CursorSpec
@@ -204,8 +204,8 @@ benchmark bench
           , hw-json-standard-cursor
           , mmap
           , semigroups
-  type:               exitcode-stdio-1.0
-  main-is:            Main.hs
-  hs-source-dirs:     bench
-  build-depends:      hw-json
-  other-modules:      Paths_hw_json
+  type:                 exitcode-stdio-1.0
+  main-is:              Main.hs
+  hs-source-dirs:       bench
+  build-depends:        hw-json
+  other-modules:        Paths_hw_json
